# example

./: CMakeLists.txt  CONTRIBUTING.md  README.md  example.cc  run.sh
model/: __model__  fc_0.b_0  fc_0.w_0  fc_1.b_0  fc_1.w_0  fc_2.b_0  fc_2.w_0  fc_3.b_0  fc_3.w_0
